src/objects/Donation__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Devotee__c</fullName>
        <label>Devotee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Donation_Date__c</fullName>
        <label>Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Through__c</fullName>
        <label>Donation Through</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Donation</label>
    <nameField>
        <displayFormat>JAI-{00000000}</displayFormat>
        <label>Donation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>